--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="./css/theme.css" rel="stylesheet">
+    <link rel="icon" href="./img/icon.svg" type="image/svg+xml">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js" integrity="sha512-KZmyTq3PLx9EZl0RHShHQuXtrvdJ+m35tuOiwlcZfs/rE7NZv29ygNA8SFCkMXTnYZQK2OX0Gm2qKGfvWEtRXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Cart Sample</title>
     <script>
@@ -119,8 +120,15 @@
 
 <body class="" ng-app="myApp" ng-controller="myCtrl">
     <div class="container py-4">
-        <div class="h5 mb-0 text-uppercase">Order Your</div>
-        <div class="h1 mb-0 text-uppercase text-primary">Helsdon Hammock</div>
+        <div class="d-flex justify-content-start align-items-center">
+            <div>
+                <img src="./img/icon.svg" alt="Helsdon Outdoors" height="50">
+            </div>
+            <div class="ps-2">
+                <div class="h6 mb-0 text-uppercase">Order Your</div>
+                <div class="h2 mb-0 text-uppercase text-primary">Helsdon Hammock</div>
+            </div>
+        </div>
         <div class="py-3">
             <div class="card shadow mb-4">
                 <div class="card-body">
@@ -135,12 +143,12 @@
                             <option value="Australia">Australia</option>
                           </select>
                     </div>
-                    <div>
-                        <button class="btn btn-link px-0 fw-bold btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#helpertextLocation" aria-expanded="false" aria-controls="helpertextLocation">Why do you need to know?</button>
+                    <div class="pt-2">
+                        <button class="btn btn-link px-0 fw-bold btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#helpertextLocation" aria-expanded="false" aria-controls="helpertextLocation"><i class="fa-solid fa-circle-chevron-down expanded-indicator me-2"></i>Why do we need to know?</button>
                     </div>
                     <div>
                         <div id="helpertextLocation" class="collapse">
-                            <div class="small fw-light">We want to make sure we provide you with the correct information so your purchase experience is as smooth as possible.  We have different payment methods and workflows depending on the country you're ordering from, so we ask up-front.</div>
+                            <div class="small fw-light">We want to make sure we provide you with the correct information so your purchase experience is as smooth as possible.  We have different payment methods and workflows depending on the country you're ordering from, so we ask up-front in order to show you the correct options and take you to the right place.</div>
                         </div>
                     </div>
                 </div>
@@ -269,7 +277,7 @@
                     </div>
                     <div class="card-footer bg-white border-top-0 mb-2">
                         <div class="d-flex justify-content-start align-items-center">
-                            <div>
+                            <div class="pe-2">
                                 <a href="https://buy.stripe.com/bIYaIIaOBcyY40MeV0" target="_blank" class="btn btn-primary px-4 py-2 text-uppercase">Buy Now <i class="fa-regular fa-circle-right fa-beat ms-2"></i></a>
                             </div>
                             <div class="fw-light">from United States</div>
