--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="h2 mb-0 text-uppercase text-primary">Helsdon Hammock</div>
             </div>
         </div>
-        <div class="py-3">
+        <div class="py-4">
             <div class="card shadow mb-4">
                 <div class="card-body">
                 <div>
@@ -154,13 +154,13 @@
                 </div>
             </div>
         </div>
-        <div class="" ng-show="customerlocation=='Canada' || customerlocation=='United States'">
-            <div class="d-flex justify-content-start mt-3 mb-4">
+        <div class="pt-3 pb-4" ng-show="customerlocation=='Canada' || customerlocation=='United States'">
+            <div class="d-flex justify-content-start">
                 <div class="pt-1"><i class="fa-brands fa-cc-stripe fa-xl"></i></div>
                 <div class="w-100 small ps-2">We use Stripe to process our payments, so you can be confident that it's secure and reliable, and use the method of payment you prefer. <a href="https://stripe.com/" target="_blank" class="text-nowrap">Learn more about Stripe</a></div>
             </div>
         </div>
-        <div class="row g-4">
+        <div class="row g-5">
             <div class="col-12" ng-show="customerlocation=='Australia'">
                 <div class="card shadow h-100">
                     <div class="card-body">
