--- a/index.html
+++ b/index.html
@@ -9,118 +9,138 @@
     <link href="./css/theme.css" rel="stylesheet">
     <link rel="icon" href="./img/icon.svg" type="image/svg+xml">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js" integrity="sha512-KZmyTq3PLx9EZl0RHShHQuXtrvdJ+m35tuOiwlcZfs/rE7NZv29ygNA8SFCkMXTnYZQK2OX0Gm2qKGfvWEtRXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <title>Cart Sample</title>
+    <title>Order | Helsdon Outdoors</title>
+    <base href="/" />
     <script>
-    var app = angular.module("myApp", []);
-        app.controller("myCtrl", function ($scope) {
+    var app = angular.module("myApp", [])
+        .config(function ($locationProvider) {
+            $locationProvider.html5Mode(true);
+        });
+        app.controller("myCtrl", function ($scope, $location) {
+
+            var queryParams = $location.search();
+            console.log(queryParams);
+            $scope.customerlocation = 'unspecified';
+            if(queryParams.country) {
+                $scope.customerlocation = checkCountry(queryParams.country.toLowerCase()) ? queryParams.country.toLowerCase() : 'unspecified';
+            }
+
+            function checkCountry(country) {
+                if(country=='canada' || country=='united states' || country=='europe' || country=='australia') {
+                    return true;
+                }
+                else {
+                    return false;
+                }
+            }
+
             $scope.europeanretailers = [
-            {
-            country: "Austria",
-            links: [
-            {label : "Campz", url : "https://www.campz.at/helsdon-outdoors-helsdon-haengematte-M1241791.html?vgid=G1821004",},
-            ]
-            },
-            {
-            country: "Belgium",
-            links: [
-            {label : "Campz", url : "https://www.campz.be/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004",},
-            ]
-            },
-            {
-            country: "Denmark",
-            links: [
-            {label : "Campz", url : "https://www.campz.dk/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004",},
-            {label : "Outnorth", url : "https://www.outnorth.dk/helsdon-outdoors/helsdon-hammock#LightGreen",},
-            ]
-            },
-            {
-            country: "Finland",
-            links: [
-            {label : "Addnature", url : "https://www.addnature.fi/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004",},
-            {label : "Outdoorexperten", url : "https://www.outdoorexperten.fi/p-74518-helsdon-hammock.aspx",},
-            {label : "Outnorth", url : "https://www.outnorth.fi/helsdon-outdoors/helsdon-hammock#LightGreen",},
-            ]
-            },
-            {
-            country: "France",
-            links: [
-            {label : "Campz", url : "https://www.campz.fr/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004",},
-            ]
-            },
-            {
-            country: "Germany",
-            links: [
-            {label : "Campz", url : "https://www.campz.de/helsdon-outdoors-helsdon-haengematte-M1241791.html?vgid=G1821004",},
-            {label : "Outnorth", url : "https://www.outnorth.de/helsdon-outdoors/helsdon-hammock#LightGreen",},
-            ]
-            },
-            {
-            country: "Italy",
-            links: [
-            {label : "Addnature", url : "https://www.addnature.it/helsdon-outdoors-helsdon-amaca-M1241791.html?vgid=G1821004",},
-            ]
-            },
-            {
-            country: "Netherlands",
-            links: [
-            {label : "Campz", url : "https://www.campz.nl/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004",},
-            ]
-            },
-            {
-            country: "Norway",
-            links: [
-            {label : "Addnature", url : "https://www.addnature.no/helsdon-outdoors-helsdon-hammock-M1241788.html?vgid=G1821001",},
-            {label : "Outdoorexperten", url : "https://www.outdoorexperten.no/p-74518-helsdon-hammock.aspx",},
-            {label : "Outnorth", url : "https://www.outnorth.no/helsdon-outdoors/helsdon-hammock#LightGreen",},
-            ]
-            },
-            {
-            country: "Poland",
-            links: [
-            {label : "Addnature", url : "https://www.addnature.pl/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004",},
-            ]
-            },
-            {
-            country: "Spain",
-            links: [
-            {label : "Campz", url : "https://www.campz.es/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004",},
-            ]
-            },
-            {
-            country: "Sweden",
-            links: [
-            {label : "Helsdon Outdoors", url : "https://www.helsdonoutdoors.com/index.html?market=se#order",},
-            {label : "Addnature", url : "https://www.addnature.com/helsdon-outdoors-helsdon-hammock-M1241788.html?vgid=G1821001",},
-            {label : "Outdoorexperten", url : "https://www.outdoorexperten.se/p-74518-helsdon-hammock.aspx",},
-            {label : "Outnorth", url : "https://www.outnorth.se/helsdon-outdoors/helsdon-hammock#LightGreen",},
-            ]
-            },
-            {
-            country: "Switzerland",
-            links: [
-            {label : "Campz", url : "https://www.campz.ch/helsdon-outdoors-helsdon-haengematte-M1241791.html?vgid=G1821004",},
-            ]
-            },
-            {
-            country: "United Kingdom",
-            links: [
-            {label : "Addnature", url : "https://www.addnature.co.uk/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004",},
-            ]
-            },
-            {
-            country: "Other European Countries",
-            links: [
-            {label : "Outnorth", url : "https://www.outnorth.com/helsdon-outdoors/helsdon-hammock#LightGreen",},
-            ]
-            },
+                {
+                    country: "Austria",
+                    links: [
+                        { label: "Campz", url: "https://www.campz.at/helsdon-outdoors-helsdon-haengematte-M1241791.html?vgid=G1821004", },
+                    ]
+                },
+                {
+                    country: "Belgium",
+                    links: [
+                        { label: "Campz", url: "https://www.campz.be/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004", },
+                    ]
+                },
+                {
+                    country: "Denmark",
+                    links: [
+                        { label: "Campz", url: "https://www.campz.dk/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004", },
+                        { label: "Outnorth", url: "https://www.outnorth.dk/helsdon-outdoors/helsdon-hammock#LightGreen", },
+                    ]
+                },
+                {
+                    country: "Finland",
+                    links: [
+                        { label: "Addnature", url: "https://www.addnature.fi/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004", },
+                        { label: "Outdoorexperten", url: "https://www.outdoorexperten.fi/p-74518-helsdon-hammock.aspx", },
+                        { label: "Outnorth", url: "https://www.outnorth.fi/helsdon-outdoors/helsdon-hammock#LightGreen", },
+                    ]
+                },
+                {
+                    country: "France",
+                    links: [
+                        { label: "Campz", url: "https://www.campz.fr/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004", },
+                    ]
+                },
+                {
+                    country: "Germany",
+                    links: [
+                        { label: "Campz", url: "https://www.campz.de/helsdon-outdoors-helsdon-haengematte-M1241791.html?vgid=G1821004", },
+                        { label: "Outnorth", url: "https://www.outnorth.de/helsdon-outdoors/helsdon-hammock#LightGreen", },
+                    ]
+                },
+                {
+                    country: "Italy",
+                    links: [
+                        { label: "Addnature", url: "https://www.addnature.it/helsdon-outdoors-helsdon-amaca-M1241791.html?vgid=G1821004", },
+                    ]
+                },
+                {
+                    country: "Netherlands",
+                    links: [
+                        { label: "Campz", url: "https://www.campz.nl/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004", },
+                    ]
+                },
+                {
+                    country: "Norway",
+                    links: [
+                        { label: "Addnature", url: "https://www.addnature.no/helsdon-outdoors-helsdon-hammock-M1241788.html?vgid=G1821001", },
+                        { label: "Outdoorexperten", url: "https://www.outdoorexperten.no/p-74518-helsdon-hammock.aspx", },
+                        { label: "Outnorth", url: "https://www.outnorth.no/helsdon-outdoors/helsdon-hammock#LightGreen", },
+                    ]
+                },
+                {
+                    country: "Poland",
+                    links: [
+                        { label: "Addnature", url: "https://www.addnature.pl/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004", },
+                    ]
+                },
+                {
+                    country: "Spain",
+                    links: [
+                        { label: "Campz", url: "https://www.campz.es/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004", },
+                    ]
+                },
+                {
+                    country: "Sweden",
+                    links: [
+                        { label: "Helsdon Outdoors", url: "https://www.helsdonoutdoors.com/index.html?market=se#order", },
+                        { label: "Addnature", url: "https://www.addnature.com/helsdon-outdoors-helsdon-hammock-M1241788.html?vgid=G1821001", },
+                        { label: "Outdoorexperten", url: "https://www.outdoorexperten.se/p-74518-helsdon-hammock.aspx", },
+                        { label: "Outnorth", url: "https://www.outnorth.se/helsdon-outdoors/helsdon-hammock#LightGreen", },
+                    ]
+                },
+                {
+                    country: "Switzerland",
+                    links: [
+                        { label: "Campz", url: "https://www.campz.ch/helsdon-outdoors-helsdon-haengematte-M1241791.html?vgid=G1821004", },
+                    ]
+                },
+                {
+                    country: "United Kingdom",
+                    links: [
+                        { label: "Addnature", url: "https://www.addnature.co.uk/helsdon-outdoors-helsdon-hammock-M1241791.html?vgid=G1821004", },
+                    ]
+                },
+                {
+                    country: "Other european Countries",
+                    links: [
+                        { label: "Outnorth", url: "https://www.outnorth.com/helsdon-outdoors/helsdon-hammock#LightGreen", },
+                    ]
+                },
             ]
         });
     </script>
 </head>
 
-<body class="bg-light" ng-app="myApp" ng-controller="myCtrl" ng-cloak>
-    <div class="container py-5">
-
+<body class="bg-light py-4 py-md-5 px-2" ng-app="myApp" ng-controller="myCtrl" ng-cloak>
+    <div class="container">
         <div class="row g-4">
             <div class="col-12">
                 <div class="d-flex justify-content-start align-items-center">
@@ -133,18 +153,18 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12">
+            <div class="col-12" ng-show="customerlocation=='unspecified'">
                 <div class="card shadow-sm bg-white mb-2">
                     <div class="card-body">
                         <div>
                             <h6>Where are you ordering from?</h6>
                             <div>
-                                <select class="form-select" aria-label="Order location" ng-model="customerlocation" ng-init="customerlocation='unspecified'">
+                                <select class="form-select" aria-label="Order location" ng-model="customerlocation">
                                     <option value="unspecified">-- select location --</option>
-                                    <option value="Canada">Canada</option>
-                                    <option value="United States">United States</option>
-                                    <option value="Europe">Europe</option>
-                                    <option value="Australia">Australia</option>
+                                    <option value="canada">Canada</option>
+                                    <option value="united states">United States</option>
+                                    <option value="europe">Europe</option>
+                                    <option value="australia">Australia</option>
                                 </select>
                             </div>
                             <div class="pt-2">
@@ -159,7 +179,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12" ng-show="customerlocation=='Canada' || customerlocation=='United States'">
+            <div class="col-12" ng-show="customerlocation=='canada' || customerlocation=='united states'">
                 <div>
                     <div class="d-flex justify-content-start">
                         <div class="pt-1"><i class="fa-brands fa-cc-stripe fa-xl"></i></div>
@@ -167,7 +187,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6" ng-show="customerlocation=='Canada'">
+            <div class="col-12 col-md-6" ng-show="customerlocation=='canada'">
                 <div class="card shadow-sm bg-white h-100">
                     <img src="./img/hammock-green.png" class="card-img-top" alt="Green Helsdon Hammock">
                     <div class="card-body">
@@ -180,12 +200,12 @@
                             <div class="pe-2">
                                 <a href="https://buy.stripe.com/fZe8AA4qd42sbte5kr" target="_blank" class="btn btn-primary px-4 py-2 text-uppercase">Buy Now <i class="fa-regular fa-circle-right fa-beat ms-2"></i></a>
                             </div>
-                            <!-- <div class="fw-light">from Canada</div> -->
+                            <!-- <div class="fw-light">from canada</div> -->
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6" ng-show="customerlocation=='Canada'">
+            <div class="col-12 col-md-6" ng-show="customerlocation=='canada'">
                 <div class="card shadow-sm bg-white h-100">
                     <img src="./img/tradeshow-pink.png" class="card-img-top" alt="Pimk Helsdon Hammock">
                     <div class="card-body">
@@ -198,12 +218,12 @@
                             <div class="pe-2">
                                 <a href="https://buy.stripe.com/fZe8AA4qd42sbte5kr" target="_blank" class="btn btn-primary px-4 py-2 text-uppercase">Buy Now <i class="fa-regular fa-circle-right fa-beat ms-2"></i></a>
                             </div>
-                            <!-- <div class="fw-light">from Canada</div> -->
+                            <!-- <div class="fw-light">from canada</div> -->
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6" ng-show="customerlocation=='United States'">
+            <div class="col-12 col-md-6" ng-show="customerlocation=='united states'">
                 <div class="card shadow-sm bg-white h-100">
                     <img src="./img/hammock-green.png" class="card-img-top" alt="Green Helsdon Hammock">
                     <div class="card-body">
@@ -216,12 +236,12 @@
                             <div class="pe-2">
                                 <a href="https://buy.stripe.com/bIYaIIaOBcyY40MeV0" target="_blank" class="btn btn-primary px-4 py-2 text-uppercase">Buy Now <i class="fa-regular fa-circle-right fa-beat ms-2"></i></a>
                             </div>
-                            <!-- <div class="fw-light">from United States</div> -->
+                            <!-- <div class="fw-light">from united states</div> -->
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6" ng-show="customerlocation=='United States'">
+            <div class="col-12 col-md-6" ng-show="customerlocation=='united states'">
                 <div class="card shadow-sm bg-white h-100">
                     <img src="./img/tradeshow-pink.png" class="card-img-top" alt="Pimk Helsdon Hammock">
                     <div class="card-body">
@@ -234,15 +254,15 @@
                             <div class="pe-2">
                                 <a href="https://buy.stripe.com/bIYaIIaOBcyY40MeV0" target="_blank" class="btn btn-primary px-4 py-2 text-uppercase">Buy Now <i class="fa-regular fa-circle-right fa-beat ms-2"></i></a>
                             </div>
-                            <!-- <div class="fw-light">from United States</div> -->
+                            <!-- <div class="fw-light">from united states</div> -->
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-12" ng-show="customerlocation=='Australia'">
+            <div class="col-12" ng-show="customerlocation=='australia'">
                 <div class="card shadow-sm bg-white h-100">
                     <div class="card-body">
-                        <h6>Please contact our represenative <span class="text-nowrap">for Australia</span></h6>
+                        <h6>Please contact our represenative <span class="text-nowrap">for australia</span></h6>
                         <div class="pt-3 ps-4">
                             <div class="">Perry Gamsby</div>
                             <div class="d-flex justify-content-start">
@@ -253,10 +273,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12" ng-show="customerlocation=='Europe'">
+            <div class="col-12" ng-show="customerlocation=='europe'">
                 <div class="card shadow-sm bg-white h-100">
                     <div class="card-body">
-                        <h6>Please contact our represenative <span class="text-nowrap">for Europe</span></h6>
+                        <h6>Please contact our represenative <span class="text-nowrap">for europe</span></h6>
                         <div class="pt-3 ps-4">
                             <div class="">Anders Edelsgren</div>
                             <div class="d-flex justify-content-start">
