--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="./css/theme.css" rel="stylesheet">
-    <link rel="icon" href="./img/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="/img/icon.svg" type="image/svg+xml">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js" integrity="sha512-KZmyTq3PLx9EZl0RHShHQuXtrvdJ+m35tuOiwlcZfs/rE7NZv29ygNA8SFCkMXTnYZQK2OX0Gm2qKGfvWEtRXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Order | Helsdon Outdoors</title>
     <base href="/" />
@@ -145,7 +145,7 @@
             <div class="col-12">
                 <div class="d-flex justify-content-start align-items-center">
                     <div>
-                        <img src="./img/icon.svg" alt="Helsdon Outdoors" height="50">
+                        <img src="/img/icon.svg" alt="Helsdon Outdoors" height="50">
                     </div>
                     <div class="ps-2">
                         <div class="h6 mb-0 text-uppercase">Order Your</div>
@@ -189,7 +189,7 @@
             </div>
             <div class="col-12 col-md-6" ng-show="customerlocation=='canada'">
                 <div class="card shadow-sm bg-white h-100">
-                    <img src="./img/hammock-green.png" class="card-img-top" alt="Green Helsdon Hammock">
+                    <img src="/img/hammock-green.png" class="card-img-top" alt="Green Helsdon Hammock">
                     <div class="card-body">
                         <h5 class="card-title">Helsdon Green</h5>
                         <p class="card-text small">The original, classic Helsdon hammock green. It feels like it belongs in nature
@@ -207,7 +207,7 @@
             </div>
             <div class="col-12 col-md-6" ng-show="customerlocation=='canada'">
                 <div class="card shadow-sm bg-white h-100">
-                    <img src="./img/tradeshow-pink.png" class="card-img-top" alt="Pimk Helsdon Hammock">
+                    <img src="/img/tradeshow-pink.png" class="card-img-top" alt="Pimk Helsdon Hammock">
                     <div class="card-body">
                         <h5 class="card-title">Pink</h5>
                         <p class="card-text small">Great visibility and style. The pink Helsdon Hammock will really stand out no
@@ -225,7 +225,7 @@
             </div>
             <div class="col-12 col-md-6" ng-show="customerlocation=='united states'">
                 <div class="card shadow-sm bg-white h-100">
-                    <img src="./img/hammock-green.png" class="card-img-top" alt="Green Helsdon Hammock">
+                    <img src="/img/hammock-green.png" class="card-img-top" alt="Green Helsdon Hammock">
                     <div class="card-body">
                         <h5 class="card-title">Helsdon Green</h5>
                         <p class="card-text small">The original, classic Helsdon hammock green. It feels like it belongs in nature
@@ -243,7 +243,7 @@
             </div>
             <div class="col-12 col-md-6" ng-show="customerlocation=='united states'">
                 <div class="card shadow-sm bg-white h-100">
-                    <img src="./img/tradeshow-pink.png" class="card-img-top" alt="Pimk Helsdon Hammock">
+                    <img src="/img/tradeshow-pink.png" class="card-img-top" alt="Pimk Helsdon Hammock">
                     <div class="card-body">
                         <h5 class="card-title">Pink</h5>
                         <p class="card-text small">Great visibility and style. The pink Helsdon Hammock will really stand out no
