--- a/index.html
+++ b/index.html
@@ -6,23 +6,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="/css/theme.css" rel="stylesheet">
-    <link rel="icon" href="/img/icon.svg" type="image/svg+xml">
+    <link href="./css/theme.css" rel="stylesheet">
+    <link rel="icon" href="./img/icon.svg" type="image/svg+xml">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js" integrity="sha512-KZmyTq3PLx9EZl0RHShHQuXtrvdJ+m35tuOiwlcZfs/rE7NZv29ygNA8SFCkMXTnYZQK2OX0Gm2qKGfvWEtRXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Order | Helsdon Outdoors</title>
-    <base href="/" />
     <script>
     var app = angular.module("myApp", [])
-        .config(function ($locationProvider) {
-            $locationProvider.html5Mode(true);
-        });
-        app.controller("myCtrl", function ($scope, $location) {
+        app.controller("myCtrl", function ($scope) {
 
-            var queryParams = $location.search();
-            console.log(queryParams);
+
+            var url = location.search;
+            const queryStringToObject = url =>
+            [...new URLSearchParams(url.split('?')[1])].reduce(
+                (a, [k, v]) => ((a[k] = v), a),
+                {}
+            );
+            var queryParams = queryStringToObject(url);
+
+            console.log(queryParams)
             $scope.customerlocation = 'unspecified';
+            $scope.showlocationselection = true;
             if(queryParams.country) {
                 $scope.customerlocation = checkCountry(queryParams.country.toLowerCase()) ? queryParams.country.toLowerCase() : 'unspecified';
+                $scope.showlocationselection = false;
             }
 
             function checkCountry(country) {
@@ -145,15 +151,15 @@
             <div class="col-12">
                 <div class="d-flex justify-content-start align-items-center">
                     <div>
-                        <img src="/img/icon.svg" alt="Helsdon Outdoors" height="50">
+                        <img src="./img/icon.svg" alt="Helsdon Outdoors" height="50">
                     </div>
-                    <div class="ps-2">
+                    <div class="ps-2 text-nowrap">
                         <div class="h6 mb-0 text-uppercase">Order Your</div>
                         <div class="h2 mb-0 text-uppercase text-primary">Helsdon Hammock</div>
                     </div>
                 </div>
             </div>
-            <div class="col-12" ng-show="customerlocation=='unspecified'">
+            <div class="col-12" ng-show="showlocationselection">
                 <div class="card shadow-sm bg-white mb-2">
                     <div class="card-body">
                         <div>
@@ -189,7 +195,7 @@
             </div>
             <div class="col-12 col-md-6" ng-show="customerlocation=='canada'">
                 <div class="card shadow-sm bg-white h-100">
-                    <img src="/img/hammock-green.png" class="card-img-top" alt="Green Helsdon Hammock">
+                    <img src="./img/hammock-green.png" class="card-img-top" alt="Green Helsdon Hammock">
                     <div class="card-body">
                         <h5 class="card-title">Helsdon Green</h5>
                         <p class="card-text small">The original, classic Helsdon hammock green. It feels like it belongs in nature
@@ -207,7 +213,7 @@
             </div>
             <div class="col-12 col-md-6" ng-show="customerlocation=='canada'">
                 <div class="card shadow-sm bg-white h-100">
-                    <img src="/img/tradeshow-pink.png" class="card-img-top" alt="Pimk Helsdon Hammock">
+                    <img src="./img/tradeshow-pink.png" class="card-img-top" alt="Pimk Helsdon Hammock">
                     <div class="card-body">
                         <h5 class="card-title">Pink</h5>
                         <p class="card-text small">Great visibility and style. The pink Helsdon Hammock will really stand out no
@@ -225,7 +231,7 @@
             </div>
             <div class="col-12 col-md-6" ng-show="customerlocation=='united states'">
                 <div class="card shadow-sm bg-white h-100">
-                    <img src="/img/hammock-green.png" class="card-img-top" alt="Green Helsdon Hammock">
+                    <img src="./img/hammock-green.png" class="card-img-top" alt="Green Helsdon Hammock">
                     <div class="card-body">
                         <h5 class="card-title">Helsdon Green</h5>
                         <p class="card-text small">The original, classic Helsdon hammock green. It feels like it belongs in nature
@@ -243,7 +249,7 @@
             </div>
             <div class="col-12 col-md-6" ng-show="customerlocation=='united states'">
                 <div class="card shadow-sm bg-white h-100">
-                    <img src="/img/tradeshow-pink.png" class="card-img-top" alt="Pimk Helsdon Hammock">
+                    <img src="./img/tradeshow-pink.png" class="card-img-top" alt="Pimk Helsdon Hammock">
                     <div class="card-body">
                         <h5 class="card-title">Pink</h5>
                         <p class="card-text small">Great visibility and style. The pink Helsdon Hammock will really stand out no
