--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div class="col-12" ng-show="customerlocation=='australia'">
                 <div class="card shadow-sm bg-white h-100">
                     <div class="card-body">
-                        <h6>Please contact our represenative <span class="text-nowrap">for australia</span></h6>
+                        <h6>Please contact our represenative <span class="text-nowrap">for Australia</span></h6>
                         <div class="pt-3 ps-4">
                             <div class="">Perry Gamsby</div>
                             <div class="d-flex justify-content-start">
@@ -282,7 +282,7 @@
             <div class="col-12" ng-show="customerlocation=='europe'">
                 <div class="card shadow-sm bg-white h-100">
                     <div class="card-body">
-                        <h6>Please contact our represenative <span class="text-nowrap">for europe</span></h6>
+                        <h6>Please contact our represenative <span class="text-nowrap">for Europe</span></h6>
                         <div class="pt-3 ps-4">
                             <div class="">Anders Edelsgren</div>
                             <div class="d-flex justify-content-start">
